# recognize-backend

./: .dockerignore  .gitignore  Dockerfile  example.env  pyproject.toml
app/: __main__.py  settings.py
app/api/: server.py
app/api/routes/: __init__.py  advice.py  packaging_records.py  recognize.py  tasks.py
app/api/schemas/: packaging.py  recognize.py  response.py
app/models/: packaging_record.py
app/schemas/: gatbage.py
app/services/: __init__.py  classify_garbage.py  database.py  llm_advice_picker.py  llm_garbage_classifier.py  llm_utils.py  qr_code.py  s3_client.py  task_queue.py
