[project]
name = "hack19"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.9",
    "httpx>=0.28.1",
    "openai>=2.9.0",
    "pydantic>=2.12.5",
    "tiktoken>=0.12.0",
    "efficientnet-pytorch>=0.7.1",
    "pillow>=12.0.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "dotenv>=0.9.9",
    "aioboto3>=15.5.0",
    "loguru>=0.7.3",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.20",
    "cashews>=7.4.3",
]
